--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@ body {
 .carousel-inner {
 box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
+.project-image img {
+  height: 350px;
+  width: 658px;
+}
 .carousel-item img {
   height: 350px;
   width: 658px;
